logs/watchdog_20251012_2115.log
[12/10/2025 21:15:01,66] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 21:15:01,88] END WATCHDOG 
